# leaflock

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/leaflock/: __init__.py  __main__.py  cli.py  crypto.py  env_file.py  exceptions.py  kdf.py  keyfile.py  machine_id.py
src/leaflock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
